# oblivious-erc20-state

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker_image.sh  docker-compose.yml  run.sh
benches/: benchmark.rs
docker/: Cargo.patch.toml
macros_tests/: Cargo.toml
macros_tests/src/: lib.rs
src/: main.rs  packets.rs
tests/: integration_tests.rs
vm/: generate_image.sh  template.pkr.hcl
vm/cloud-init/: user-data
vm/scripts/: cleanup.sh  setup.sh
