[package]
name = "oblivious_erc20_state"
version = "0.1.0"
edition = "2021"

[dependencies]
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.2" }

verified_contract_state = { git = "ssh://git@github.com/xtrm0/verified_contract_state.git" }
ordb = { git = "ssh://git@github.com/obliviouslabs/ordb.git" }
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-test = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12.9", features = ["json"] }
criterion = "0.5.1" # For benchmarking
futures-util = "0.3.31"
dotenv = "0.15"
lazy_static = "1.5.0"
jsonrpsee = "0.24.6"
alloy-rpc-types = "0.6.4"



[dev-dependencies]
macros_tests = { path = "macros_tests" }
serial_test = "3.2.0"
rand = "0.8.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3