[package]
name = "oblivious_erc20_state"
version = "0.1.0"
edition = "2021"

[dependencies]
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0"}
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }

verified_contract_state = { git = "https://github.com/obliviouslabs/verified_contract_state.git" }
ordb = { git = "https://github.com/obliviouslabs/ordb.git" }


axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12.9", features = ["json"] }
futures-util = "0.3.31"
dotenv = "0.15"
lazy_static = "1.4.0"
jsonrpsee = "0.24.6"
alloy-rpc-types = "0.11.1"
hyper = { version = "1.5.2", features = ["full"] }
hyperlocal = "0.9.1"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] } 



[dev-dependencies]
macros_tests = { path = "macros_tests" }
serial_test = "3.2.0"
rand = "0.8.4"
criterion = "0.5.1" # For benchmarking

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

# Adds benches/benchmark.rs as a benchmark:
[[bench]]
name = "benchmark"
harness = false
